# data-model-formation

./: README.md  pyproject.toml
data_model_formation/: __init__.py  cli.py
