[tool.poetry]
name = "data_model_formation"
version = "0.1.0"
description = ""
authors = ["David Andersson <anderssonpublic@gmail.com>"]

[tool.poetry.scripts]
data_model_formation = "data_model_formation.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
